--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
 .venv/
 .env*
-=======
+
 # dependencies
 */node_modules
 /.pnp
@@ -16,7 +15,7 @@
 /coverage
 
 # next.js
-/.next/
+.next/
 /out/
 
 # production
@@ -41,4 +40,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
->>>>>>> frontend
