--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 oauthlib==3.3.1
+pillow==12.0.0
 psycopg2-binary==2.9.11
 pycparser==2.23
 PyJWT==2.10.1
