--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.2",
@@ -19,6 +21,7 @@
     "motion": "^12.23.25",
     "next": "^16.0.10",
     "react": "19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
