--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,9 +26,11 @@ jsonschema-specifications==2025.9.1
 kombu==5.6.1
 oauthlib==3.3.1
 packaging==25.0
+pexpect==4.9.0
 pillow==12.0.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
+ptyprocess==0.7.0
 pycparser==2.23
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
@@ -44,6 +46,8 @@ six==1.17.0
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
 sqlparse==0.5.4
+Strip==0.0.1.dev14
+stripe==14.1.0
 text-unidecode==1.3
 typing_extensions==4.15.0
 tzdata==2025.3
