--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
     "next": "^16.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-simple-typewriter": "^5.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "yup": "^1.7.1"
   },
