--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
 amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.12.1
 asgiref==3.11.0
 attrs==25.4.0
 billiard==4.2.4
@@ -12,6 +14,7 @@ click-plugins==1.1.1.2
 click-repl==0.3.0
 cryptography==46.0.3
 defusedxml==0.7.1
+distro==1.9.0
 Django==5.2.9
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
@@ -19,12 +22,17 @@ djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 drf-spectacular==0.29.0
 exceptiongroup==1.3.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 inflection==0.5.1
+jiter==0.12.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kombu==5.6.1
 oauthlib==3.3.1
+openai==2.15.0
 packaging==25.0
 pexpect==4.9.0
 pillow==12.0.0
@@ -32,6 +40,8 @@ prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -43,12 +53,15 @@ requests==2.32.5
 requests-oauthlib==2.0.0
 rpds-py==0.30.0
 six==1.17.0
+sniffio==1.3.1
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
 sqlparse==0.5.4
 Strip==0.0.1.dev14
 stripe==14.1.0
 text-unidecode==1.3
+tqdm==4.67.1
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 tzlocal==5.3.1
