--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,11 +17,14 @@ defusedxml==0.7.1
 distro==1.9.0
 Django==5.2.9
 django-cors-headers==4.9.0
+django-debug-toolbar==6.1.0
+django-redis==5.4.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 drf-spectacular==0.29.0
 exceptiongroup==1.3.1
+gunicorn==22.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -48,6 +51,7 @@ python-dotenv==1.2.1
 python-slugify==8.0.4
 python3-openid==3.2.0
 PyYAML==6.0.3
+redis==5.0.4
 referencing==0.37.0
 requests==2.32.5
 requests-oauthlib==2.0.0
